--- a/src/uSeoToolkit.Umbraco8.Website/App_Plugins/uSeoToolkit/Interface/SiteAudit/create.html
+++ b/src/uSeoToolkit.Umbraco8.Website/App_Plugins/uSeoToolkit/Interface/SiteAudit/create.html
@@ -7,17 +7,47 @@
                 1. Audit information
             </div>
             <div class="umb-box-content">
-                <div class="umb-el-wrap">
-                    <label for="name" class="control-label" style="width:auto;">Name</label>
-                    <div class="controls" style="width:100%; margin:auto;">
-                        <input type="text" class="umb-textstring" id="name" style="width:100%;" ng-model="$ctrl.state.selectedAudit.name" />
+                <div class="control-group umb-control-group">
+                    <div class="umb-el-wrap">
+                        <div class="control-header">
+                            <label for="name" class="control-label">Name</label>
+                        </div>
+                        <div class="controls">
+                            <input type="text" class="umb-textstring" id="name" style="width: 100%;" ng-model="$ctrl.state.selectedAudit.name" />
+                        </div>
                     </div>
                 </div>
-                <div class="umb-el-wrap" style="padding-top: 10px">
-                    <label for="starting-node" class="control-label" style="width:auto;">Starting node</label>
-                    <div class="controls" style="width:100%; margin:auto;">
-                        <a id="starting-node" ng-if="$ctrl.state.selectedAudit.selectedNode == null" ng-click="$ctrl.fn.openNodeDialog()" style="width:100%;">Select starting node</a>
-                        <a ng-if="$ctrl.state.selectedAudit.selectedNode != null" ng-click="$ctrl.fn.openNodeDialog()" style="width:100%;">{{$ctrl.state.selectedAudit.selectedNode.name}}</a>
+                <div class="control-group umb-control-group">
+                    <div class="umb-el-wrap" style="padding-top: 10px">
+                        <div class="control-header">
+                            <label for="starting-node" class="control-label">Starting node</label>
+                        </div>
+                        <div class="controls">
+                            <a id="starting-node" ng-if="$ctrl.state.selectedAudit.selectedNode == null" ng-click="$ctrl.fn.openNodeDialog()">Select starting node</a>
+                            <a ng-if="$ctrl.state.selectedAudit.selectedNode != null" ng-click="$ctrl.fn.openNodeDialog()">{{$ctrl.state.selectedAudit.selectedNode.name}}</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="control-group umb-control-group">
+                    <div class="umb-el-wrap" style="padding-top: 10px">
+                        <div class="control-header">
+                            <label for="starting-node" class="control-label">Max pages to crawl</label>
+                            <small class="control-description">The max pages to crawl. Leave empty for no maximum</small>
+                        </div>
+                        <div class="controls">
+                            <input type="number" class="umb-number" id="name" style="width: 100%;" ng-model="$ctrl.state.selectedAudit.maxPagesToCrawl" />
+                        </div>
+                    </div>
+                </div>
+                <div class="control-group umb-control-group">
+                    <div class="umb-el-wrap" style="padding-top: 10px">
+                        <div class="control-header">
+                            <label for="starting-node" class="control-label">Minimum delay between requests</label>
+                            <small class="control-description">Minimum delay to use between requests.</small>
+                        </div>
+                        <div class="controls">
+                            <input type="number" class="umb-number" id="name" style="width: 100%;" ng-model="$ctrl.state.selectedAudit.delayBetweenRequests" />
+                        </div>
                     </div>
                 </div>
             </div>
@@ -27,14 +57,18 @@
                 2. Checks
             </div>
             <div class="umb-box-content">
-                <div class="umb-permission" ng-repeat="check in $ctrl.state.checks">
-                    <umb-toggle class="umb-permission__toggle"
-                                checked="$ctrl.state.selectedAudit.checks.includes(check.Id)"
-                                on-click="$ctrl.state.toggleCheck(check)">
-                    </umb-toggle>
-                    <div class="umb-permission__content" ng-click="$ctrl.fn.toggleCheck(check)">
-                        <div>{{check.Name}}</div>
-                        <div class="umb-permission__description">{{check.Description}}</div>
+                <div class="control-group umb-control-group">
+                    <div class="umb-el-wrap" ng-repeat="check in $ctrl.state.checks">
+                        <div class="control-header" style="padding-top: 0;">
+                            <div class="control-label">{{check.Name}}</div>
+                            <small class="control-description">{{check.Description}}</small>
+                        </div>
+                        <div class="controls">
+                            <umb-toggle class="umb-permission__toggle"
+                                        checked="$ctrl.state.selectedAudit.checks.includes(check.Id)"
+                                        on-click="$ctrl.fn.toggleCheck(check)">
+                            </umb-toggle>
+                        </div>
                     </div>
                 </div>
             </div>
