Add extra logic to editors for better extendability

--- a/src/uSeoToolkit.Umbraco8.Website/App_Plugins/uSeoToolkit/Interface/ContentApps/SeoSettings/seoSettings.html
+++ b/src/uSeoToolkit.Umbraco8.Website/App_Plugins/uSeoToolkit/Interface/ContentApps/SeoSettings/seoSettings.html
@@ -19,7 +19,7 @@
                         </div>
                         <div class="controls">
                             <div class="umb-property-editor">
-                                {{vm.metaValues[field.alias]}}
+                                {{field.value}}
                             </div>
                         </div>
                     </div>
