Moved code to editors

--- a/src/uSeoToolkit.Umbraco8.Website/App_Plugins/uSeoToolkit/Interface/SeoFieldEditors/FieldsEditor/fieldsEditor.html
+++ b/src/uSeoToolkit.Umbraco8.Website/App_Plugins/uSeoToolkit/Interface/SeoFieldEditors/FieldsEditor/fieldsEditor.html
@@ -2,7 +2,7 @@
     <div class="control-header">
         <label class="control-label">{{vm.field.title}}</label>
         <small class="control-description">
-            {{field.description}}
+            {{vm.field.description}}
         </small>
     </div>
     <div class="controls">
