--- a/src/uSeoToolkit.Umbraco8.Website/App_Plugins/uSeoToolkit/Interface/ContentApps/SeoSettings/seoSettings.html
+++ b/src/uSeoToolkit.Umbraco8.Website/App_Plugins/uSeoToolkit/Interface/ContentApps/SeoSettings/seoSettings.html
@@ -1,10 +1,10 @@
 ﻿<div ng-controller="uSeoToolkit.ContentApps.SeoSettingsController as vm" class="form-horizontal">
     <umb-editor-sub-header>
         <umb-editor-sub-header-content-right>
-            <umb-button action="vm.clickButton()"
+            <umb-button action="vm.startEdit()"
                         type="button"
                         button-style="outline"
-                        label="Preview">
+                        label="Edit">
             </umb-button>
         </umb-editor-sub-header-content-right>
     </umb-editor-sub-header>
