--- a/src/uSeoToolkit.Umbraco8.Website/App_Plugins/uSeoToolkit/backoffice/SiteAudit/create.html
+++ b/src/uSeoToolkit.Umbraco8.Website/App_Plugins/uSeoToolkit/backoffice/SiteAudit/create.html
@@ -77,9 +77,9 @@
                 </umb-box>
             </div>
             <div>
-                <umb-button type="button" style="float: right;" button-style="success btn-sm" size="xs" label-key="CreateAndStart" action="vm.createAudit(true)">Create and start</umb-button>
-                <umb-button type="button" style="float: right;" button-style="success btn-sm" size="xs" label-key="Create" action="vm.createAudit(false)">Create</umb-button>
-                <umb-button type="button" style="float: right;" button-style="primary btn-sm" size="xs" label-key="Cancel" action="vm.cancel()">Cancel</umb-button>
+                <umb-button type="button" style="float: right;" button-style="success btn-sm" size="xs" label-key="siteAudit_createAndStart" action="vm.createAudit(true)">Create and start</umb-button>
+                <umb-button type="button" style="float: right;" button-style="success btn-sm" size="xs" label-key="siteAudit_create" action="vm.createAudit(false)">Create</umb-button>
+                <umb-button type="button" style="float: right;" button-style="primary btn-sm" size="xs" label-key="siteAudit_cancel" action="vm.cancel()">Cancel</umb-button>
             </div>
         </div>
     </div>
