--- a/src/uSeoToolkit.Umbraco8.Website/App_Plugins/uSeoToolkit/backoffice/SiteAudit/list.html
+++ b/src/uSeoToolkit.Umbraco8.Website/App_Plugins/uSeoToolkit/backoffice/SiteAudit/list.html
@@ -3,6 +3,33 @@
     <div class="umb-dashboard umb-scrollable row-fluid">
         <div class="umb-dashboard__content">
             <umb-load-indicator ng-if="vm.loading"></umb-load-indicator>
+            
+            <umb-editor-sub-header ng-class="{'--state-selection':(vm.selection.length > 0)}">
+                <umb-editor-sub-header-content-left ng-if="vm.selection.length == 0">
+                    <umb-button type="button"
+                                button-style="outline"
+                                size="xs"
+                                label-key="siteAudit_create"
+                                action="vm.create()">Create Audit</umb-button>
+                </umb-editor-sub-header-content-left>
+
+                <umb-editor-sub-header-content-left ng-if="vm.selection.length > 0">
+                    <umb-button type="button"
+                                button-style="white"
+                                size="xs"
+                                label-key="buttons_clearSelection"
+                                action="vm.clearSelection()">Clear Selection</umb-button>
+                </umb-editor-sub-header-content-left>
+                
+                <umb-editor-sub-header-content-right ng-if="vm.selection.length > 0">
+                    <umb-button type="button"
+                                button-style="white"
+                                size="xs"
+                                label-key="general_delete"
+                                icon="icon-trash"
+                                action="vm.deleteSelection()">Delete</umb-button>
+                </umb-editor-sub-header-content-right>
+            </umb-editor-sub-header>
 
             <umb-table items="vm.items"
                        item-properties="vm.options.includeProperties"
